[package]
name = "mdbook-fix-cjk-spacing"
version = "0.1.1"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
edition = "2018"
description = "mdbook preprocess that fixes CJK line breaks"
documentation = "https://github.com/lotabout/mdbook-fix-cjk-spacing"
homepage = "https://github.com/lotabout/mdbook-fix-cjk-spacing"
repository = "https://github.com/lotabout/mdbook-fix-cjk-spacing"
readme  = "README.md"
keywords = ["mdbook", "CJK"]
license = "MIT"

[[bin]]
name = "mdbook-fix-cjk-spacing"
path = "src/main.rs"

[lib]
name = "mdbook_fix_cjk_spacing"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mdbook = "0.4.1"
clap = "2.33.1"
pulldown-cmark = "0.7.2"
pulldown-cmark-to-cmark = "4.0.2"
anyhow = "1.0.31"
serde_json = "1.0.56"

[profile.release]
lto = true
debug = false
